resolve issues in dark mode

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* .dark {
+    color-scheme: dark;
+} */
+
 .toc {
     font-family: Arial, sans-serif;
     margin: 1rem 0;
